k8s/ingress-idp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: eudi-wallet
  name: ingress-idp-keycloack-ssi-idp
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "60"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:444170698423:certificate/3eea5a83-c2b4-4d4e-814c-44333c1a6976
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idp-keycloack-ssi-idp-service
                port:
                  number: 88
